--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,16 @@
         </resource>
     </resources>
     </build>
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk16 -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>1.45</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
